Create etch-a-sketch base grid and functionality

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button id="resize-bt">Resize</button>
+    <button id="tool">Tool</button>
     <div class="container"></div>
 </body>
 </html>
