Add paint and background color pickers

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <button id="resize-bt">Resize</button>
     <button id="tool">Tool</button>
-    <div class="container"></div>
+
+    <label for="paint-picker">Color Picker:</label>
+    <input type="color" id="paint-picker" value="#000000">
+    
+    <label for="background-picker">Background Picker:</label>
+    <input type="color" id="background-picker" value="#ffffff">
+
+   <div class="sketch-grid"></div>
 </body>
 </html>
