Add painting download to png

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
     <script src="script.js" defer></script>
+    <script src="html2canvas.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,6 +18,7 @@
     <label for="background-picker">Background Picker:</label>
     <input type="color" id="background-picker" value="#ffffff">
 
-   <div class="sketch-grid"></div>
+    <div class="sketch-grid"></div>
+    <button id="save-bt">Save sketch</button>
 </body>
 </html>
